- Print the error on crawling tps for debuging - Update notebook - Update recap tps

--- a/notebook/Pemeriksaan Data.ipynb
+++ b/notebook/Pemeriksaan Data.ipynb
@@ -31,22 +31,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "724384 TPS\n",
-      "01 : 76048200 suara\n",
-      "02 : 60526743 suara\n",
-      "Selisih : 15521457 suara\n"
+      "767096 TPS\n",
+      "01 : 80162564 suara\n",
+      "02 : 64867850 suara\n",
+      "Selisih : 15294714 suara\n"
      ]
     }
    ],
    "source": [
-    "recap = pd.read_csv('../recap-tps-20190519122932.csv')\n",
+    "recap = pd.read_csv('../recap-tps-20190525123714.csv')\n",
     "print(str(len(recap)) + \" TPS\")\n",
     "print(\"01 : \" + str(sum(recap['pemilih jokowi'])) + \" suara\")\n",
     "print(\"02 : \" + str(sum(recap['pemilih prabowo'])) + \" suara\")\n",
@@ -62,17 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "31574 TPS\n",
-      "01 : 3137202 suara\n",
-      "02 : 3002747 suara\n",
-      "Selisih : 134455 suara\n"
+      "35204 TPS\n",
+      "01 : 3446660 suara\n",
+      "02 : 3401208 suara\n",
+      "Selisih : 45452 suara\n"
      ]
     }
    ],
@@ -93,17 +93,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9387 TPS\n",
-      "01 : 940043 suara\n",
-      "02 : 837388 suara\n",
-      "Selisih : 102655 suara\n"
+      "10260 TPS\n",
+      "01 : 1012999 suara\n",
+      "02 : 932022 suara\n",
+      "Selisih : 80977 suara\n"
      ]
     }
    ],
@@ -124,17 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12582 TPS\n",
-      "01 : 1252599 suara\n",
-      "02 : 1265405 suara\n",
-      "Selisih : 12806 suara\n"
+      "13713 TPS\n",
+      "01 : 1344851 suara\n",
+      "02 : 1385249 suara\n",
+      "Selisih : 40398 suara\n"
      ]
     }
    ],
@@ -155,22 +155,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3317 TPS\n",
-      "01 : 270411 suara\n",
-      "02 : 356066 suara\n",
-      "Selisih : 85655 suara\n",
+      "3436 TPS\n",
+      "01 : 279542 suara\n",
+      "02 : 367503 suara\n",
+      "Selisih : 87961 suara\n",
       "\n",
-      "3317 TPS\n",
-      "01 : 270411 suara\n",
-      "02 : 356066 suara\n",
-      "Selisih : 85655 suara\n"
+      "3436 TPS\n",
+      "01 : 279542 suara\n",
+      "02 : 367503 suara\n",
+      "Selisih : 87961 suara\n"
      ]
     }
    ],
@@ -197,17 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "678667 TPS\n",
-      "01 : 71550450 suara\n",
-      "02 : 56190108 suara\n",
-      "Selisih : 15360342 suara\n"
+      "716704 TPS\n",
+      "01 : 75270793 suara\n",
+      "02 : 60024063 suara\n",
+      "Selisih : 15246730 suara\n"
      ]
     }
    ],
@@ -220,6 +220,111 @@
     "print(\"01 : \" + str(sum(recap['pemilih jokowi'])) + \" suara\")\n",
     "print(\"02 : \" + str(sum(recap['pemilih prabowo'])) + \" suara\")\n",
     "print(\"Selisih : \" + str(abs(sum(recap['pemilih jokowi'] - recap['pemilih prabowo']))) + \" suara\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['wilayah', 'kabupaten', 'kecamatan', 'kelurahan', 'tps', 'timestamp',\n",
+       "       'jumlah pemilih', 'jumlah pengguna', 'pemilih jokowi',\n",
+       "       'pemilih prabowo', 'jumlah suara sah', 'jumlah suara tidak sah',\n",
+       "       'total suara', 'link C1 halaman 1', 'link C1 halaman 2'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recap.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         0.864865\n",
+       "1         0.783019\n",
+       "2         0.918519\n",
+       "3         0.684848\n",
+       "4         0.781065\n",
+       "5         0.824427\n",
+       "6         0.700787\n",
+       "7         0.932203\n",
+       "8         0.761194\n",
+       "9         0.788991\n",
+       "10        0.878924\n",
+       "11        0.712121\n",
+       "12        0.980392\n",
+       "13        0.911602\n",
+       "14        0.866359\n",
+       "15        0.787500\n",
+       "16        0.964789\n",
+       "17        0.873563\n",
+       "18        0.830508\n",
+       "19        0.900000\n",
+       "20        0.902778\n",
+       "21        0.810000\n",
+       "22        0.848315\n",
+       "23        0.906250\n",
+       "24        0.908046\n",
+       "25        0.924658\n",
+       "26        0.830189\n",
+       "27        0.873134\n",
+       "28        0.981043\n",
+       "29        0.949309\n",
+       "            ...   \n",
+       "767066    0.000000\n",
+       "767067    0.000000\n",
+       "767068    0.000000\n",
+       "767069    0.000000\n",
+       "767070    0.000000\n",
+       "767071    0.000000\n",
+       "767072    0.000000\n",
+       "767073    0.000000\n",
+       "767074    0.000000\n",
+       "767075    0.000000\n",
+       "767076    0.000000\n",
+       "767077    0.000000\n",
+       "767078    0.000000\n",
+       "767079    0.000000\n",
+       "767080    0.000000\n",
+       "767081    0.000000\n",
+       "767082    0.000000\n",
+       "767083    0.000000\n",
+       "767084    0.000000\n",
+       "767085    0.000000\n",
+       "767086    0.000000\n",
+       "767087    0.000000\n",
+       "767088    0.000000\n",
+       "767089    0.000000\n",
+       "767090    0.000000\n",
+       "767091    0.000000\n",
+       "767092    0.000000\n",
+       "767093    0.000000\n",
+       "767094    0.000000\n",
+       "767095    0.000000\n",
+       "Length: 716704, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recap['pemilih prabowo'] / recap['jumlah suara sah']"
    ]
   },
   {
